5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1735_2519.log
== TEST (2019-05-20 18:12:36) 
-- CODE:
Atorre = int(input("insira a altura: "))
Msubir = int(input("insira os minutos pra subir: "))
Mdescer = int(input("insira os minutos pra descer: "))

Ague = Msubir
cont = 1

while(Msubir < Atorre):
	ague = ague + Msubir
	if (ague < Atorre):
		ague = ague - Mdescer
	cont += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ague = ague + Msubir
NameError: name 'ague' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:12:51) 
-- CODE:
Atorre = int(input("insira a altura: "))
Msubir = int(input("insira os minutos pra subir: "))
Mdescer = int(input("insira os minutos pra descer: "))

ague = Msubir
cont = 1

while(Msubir < Atorre):
	ague = ague + Msubir
	if (ague < Atorre):
		ague = ague - Mdescer
	cont += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ague = ague + Msubir
NameError: name 'ague' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:13:05) 
-- CODE:
Atorre = int(input("insira a altura: "))
Msubir = int(input("insira os minutos pra subir: "))
Mdescer = int(input("insira os minutos pra descer: "))

ague = Msubir
cont = 1

while(Msubir < Atorre):
	ague = ague + Msubir
	if (ague < Atorre):
		ague = ague - Mdescer
	cont += 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ague = ague + Msubir
NameError: name 'ague' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:15:58) 
-- CODE:
Atorre = int(input("insira a altura: "))
subindo = int(input("insira os minutos pra subir: "))
descendo = int(input("insira os minutos pra descer: "))

altura = subindo
cont = 1

while(altura < Atorre):
	altura = altura + subindo
	if (altura < Atorre):
		altura = altura - descendo
		cont += 1
print(cont)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:16:24) 
-- CODE:
Atorre = int(input("insira a altura: "))
subindo = int(input("insira os minutos pra subir: "))
descendo = int(input("insira os minutos pra descer: "))

altura = subindo
cont = 1

while(altura < Atorre):
	altura = altura + subindo
	if (altura < Atorre):
		altura = altura - descendo
	cont += 1
print(cont)
-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:16:45) 
-- CODE:
Atorre = int(input("insira a altura: "))
subindo = int(input("insira os minutos pra subir: "))
descendo = int(input("insira os minutos pra descer: "))

altura = subindo
cont = 1

while(altura <= Atorre):
	altura = altura + subindo
	if (altura < Atorre):
		altura = altura - descendo
	cont += 1
print(cont)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:16:49) 
-- CODE:
Atorre = int(input("insira a altura: "))
subindo = int(input("insira os minutos pra subir: "))
descendo = int(input("insira os minutos pra descer: "))

altura = subindo
cont = 1

while(altura <= Atorre):
	altura = altura + subindo
	if (altura < Atorre):
		altura = altura - descendo
	cont += 1
print(cont)
-- EXECUTION TIME:
0.19661
-- TEST CASE 1:
---- input:
15
2
1
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
15
3
1
---- correct output:
7
---- user output:
7
-- TEST CASE 3:
---- input:
66
56
23

---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
